--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=app
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/foodservice
+spring.datasource.username=my_admin
+spring.datasource.password=my_password
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
